# AI_For_CallCenter

./: .gitignore  README.md
Part-1/: README.md  orders_testing.db  requirements.txt
Part-1/Database/: orders_testing_copy.db
Part-1_AI_For_CSR/: Chat_With_Database.py  Chat_With_Database_v1.py
Part-2_AI_For_CSR-AIAgents/: README.md  app_gateway.py  pyproject.toml  requirements.txt  requirements_uv.txt  streamlit_app.py
Part-2_AI_For_CSR-AIAgents/Documentation/: ~$mpany Policies.docx
Part-2_AI_For_CSR-AIAgents/n8n Workflow/: AI_CSR_Agent.json
Part-2_AI_For_CSR-AIAgents/services/fulfillment/: app.py  schemas.py  service.py
Part-2_AI_For_CSR-AIAgents/services/fulfillment/Storage/: fulfillment.db
Part-2_AI_For_CSR-AIAgents/services/orders/: app.py  schemas.py  service.py
Part-2_AI_For_CSR-AIAgents/services/orders/Storage/: orders.db
Part-2_AI_For_CSR-AIAgents/services/tickets/: app.py  schemas.py  service.py
Part-2_AI_For_CSR-AIAgents/services/tickets/Storage/: support_tickets.db
