[project]
name = "part-2-ai-for-csr-aiagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "email-validator>=2.3.0",
    "fastapi>=0.119.0",
    "fastapi-mcp>=0.4.0",
    "mcp[cli]>=1.18.0",
    "pydantic>=2",
    "rich>=14.2.0",
    "typer>=0.19.2",
    "uvicorn>=0.37.0",
]
